# Shopify_Inventory_Challenge

./: .replit  README.md  pyproject.toml
shopify/: db.sqlite3
shopify/inventory/: admin.py  forms.py  models.py  urls.py  views.py
shopify/inventory/migrations/: 0001_initial.py  0002_remove_inventory_location_remove_inventory_price_and_more.py  0003_item.py  0004_item_deleted_alter_item_in_stock.py  0005_alter_item_name.py
shopify/inventory/templates/inventory/: add_inventory.html  add_item.html  base.html  delete_item.html  deleted_items.html  edit_item.html  home.html  veiw_inventory.html
shopify/items/: models.py  views.py
shopify/items/migrations/: 0001_initial.py
shopify/items/templates/items/: base.html  inventory_list.html
shopify/shopify/: settings.py  urls.py
